<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:weightSum="2"
    android:orientation="vertical"
    >
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4"
        android:orientation="horizontal">
        <TextView android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/tVColorRed"
            android:text="@string/red"
            android:textColor="@color/white"
            android:background="@color/red"
            android:gravity="center_horizontal"/>



        <TextView android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/tVColorGreen"
            android:text="@string/green"
            android:textColor="@color/white"
            android:background="@color/green"
            android:gravity="top|center"
            />
        <TextView android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/tVColorBlue"
            android:text="@string/blue"
            android:textColor="@color/white"
            android:background="@color/blue"
            android:gravity="top|center"
            />
        <TextView android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/tVColorYellow"
            android:text="@string/yellow"
            android:textColor="@color/white"
            android:background="@color/yellow"
            android:gravity="top|center"
            />



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4"
        android:background="@color/black"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/rowOne"
            android:textColor="@color/white"
            android:textSize="50dp"
            android:id="@+id/TVOne"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/rowSecond"
            android:textColor="@color/white"
            android:textSize="50dp"
            android:id="@+id/TVTwo"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/rowTree"
            android:textColor="@color/white"
            android:textSize="50dp"
            android:id="@+id/TVThree"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/rowfour"
            android:textColor="@color/white"
            android:textSize="50dp"
            android:id="@+id/TVFour"/>
    </LinearLayout>




</LinearLayout>